# tmux-mcp

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  PROMPT.md  README.md  README_zh.md  install.sh  ralph.yml
benches/: memory_profile.rs
docs/handoff/: 260320-handoff.md
docs/plans/: 2026-03-19-fixed-log-retention-design.md  2026-03-19-fixed-log-retention.md  dev_plan_claude-mcp-reconnect-recovery.md
scripts/: repro_claude_mcp_failed_state.sh
specs/claude-mcp-reconnect-recovery/: design.md  implementation-plan.md  requirements.md
src/: config.rs  error.rs  lib.rs  logging.rs  main.rs
src/mcp/: mod.rs  protocol.rs  resources.rs  tools.rs
src/state/: command_registry.rs  mod.rs
src/tmux/: command.rs  mod.rs  models.rs  parser.rs  service.rs
src/transport/: http.rs  mod.rs
tests/: claude_reconnect_regression.rs  command_lifecycle.rs  command_registry_limits.rs  config_env.rs  error_mapping.rs  log_rotation.rs  multi_client_http.rs  parser_contract.rs  protocol_contract.rs  protocol_parity.rs  resource_contract.rs  service_contract.rs  streamable_http.rs  tmux_integration.rs  tmux_timeout_regression.rs  tool_contract.rs
tests/features/: command_lifecycle.feature  mcp_protocol.feature  mcp_resources.feature  mcp_tools.feature  runtime_resilience.feature
tests/support/: fake_tmux_error.sh  fake_tmux_hang.sh  fake_tmux_success.sh
